--- a/html/index.html
+++ b/html/index.html
@@ -43,14 +43,16 @@
 
 <!-- MODEP CSS -->
 <style type="text/css">
-        #pedalboards-library .pedalboards, #bank-library #bank-edit {background-image: none;}
-        #main-menu #mod-devices {display: none;}
-        header a {display: none !important;}
-        header#pedalboard-actions, #bank-library header, #cloud-plugins-library header,
-        #pedalboards-library header {background-image: none; padding-left: 10px;}
-        .plugin-info .online-button-href {display: none;}
-        #pedalboard-info {left: 10px;}
-        path.loadinglogo {display: none !important;}
+    #pedalboards-library .pedalboards, #bank-library #bank-edit {background-image: none;}
+    #main-menu #mod-devices {display: none;}
+    header a {display: none !important;}
+    header#pedalboard-actions, #bank-library header, #cloud-plugins-library header,
+    #pedalboards-library header {background-image: none; padding-left: 10px;}
+    .plugin-info .online-button-href {display: none;}
+    #pedalboard-info {left: 10px;}
+    path.loadinglogo {display: none !important;}
+    #bank-edit #bank-addressings form.form {display: none;}
+    #bank-library #bank-pedalboards {top: 110px !important;}
 </style>
     
 
