--- a/html/index.html
+++ b/html/index.html
@@ -53,6 +53,7 @@
     path.loadinglogo {display: none !important;}
     #bank-edit #bank-addressings form.form {display: none;}
     #bank-library #bank-pedalboards {top: 110px !important;}
+    #js-preset-enabler {display: none;}
 </style>
     
 
